# tonel-smalltalk-language-server

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
lsp/: Cargo.toml
lsp/src/: backend.rs  main.rs  src_tree.rs  workspace.rs
lsp/test/tonel/Dummy-Core/: DmClassVarsExample.class.st  DmError.class.st  DmGenericError.class.st  DmQuotedSymbolName.class.st  DmSymbolName.class.st  package.st
