[package]
name = "tonel-smalltalk-language-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tonel-smalltalk-language-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
tree-sitter = "0.20"
tree-sitter-tonel-smalltalk = { git = "https://github.com/mumez/tree-sitter-tonel-smalltalk" }
dashmap = "5"
walkdir = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
