[package]
name = "tonel-smalltalk-language-server"
version = "1.3.1"
edition = "2021"

[[bin]]
name = "tonel-smalltalk-language-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
tree-sitter = "0.26"
tree-sitter-tonel-smalltalk = { git = "https://github.com/mumez/tree-sitter-tonel-smalltalk", tag = "v0.2.0" }
dashmap = "5"
walkdir = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
